# simple-web-uuid

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-build.yml  workflow.yml
kubernetes/manifests/: deploy.yaml  hpa.yaml  serviceaccount.yaml  svc.yaml
simple_web_uuid/: __init__.py  main.py
